Add DELETE /v1/jobs/:job/executions endpoint to clear counters (#1876)
* Initial plan

* Add DeleteExecutions API endpoint and implementation


* Add tests for DeleteExecutions functionality


* Address code review feedback: improve error handling and add validation


* Update OpenAPI documentation with DELETE executions endpoint


* Initial plan

* Complete rebase onto latest main branch


* Update dkron.proto

* Add DeleteExecutions proto and regenerate

* fix: merge conflicts

* Remove go_package options from proto files

---------
